--- a/templates/tougcomsys/firsthome/page.html
+++ b/templates/tougcomsys/firsthome/page.html
@@ -1,9 +1,9 @@
 {% extends './_base.html' %}
 {% block content %}
 <div id="page_detail" class="detail">
-    <div class="title post_title">
+    <div class="headline post_headline">
         <h2>
-            {{ page.title }}
+            {{ page.headline }}
         </h2>
     </div>
     {% if page.above_content_image %}
