--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -21,9 +21,9 @@
         </div>
         <div id="menubar">
             <a href="{% url 'tougcomsys:homepage'  %}">Home</a> 
-            <a href="{% url 'tougcomsys:page' 'executive-committee' %}">Executive Committee</a> 
-            <a href="{% url 'tougcomsys:page' 'join-us' %}">Join Us</a> 
-            <a href="{% url 'tougcomsys:page' 'contact-us' %}">Contact Us</a> 
+            <a href="{% url 'tougcomsys:article' 'executive-committee' %}">Executive Committee</a> 
+            <a href="{% url 'tougcomsys:article' 'join-us' %}">Join Us</a> 
+            <a href="{% url 'tougcomsys:article' 'contact-us' %}">Contact Us</a> 
         </div>
         <div id="mainstage">
             {% block content %}
