--- a/templates/tougcomsys/firsthome/event.html
+++ b/templates/tougcomsys/firsthome/event.html
@@ -1,9 +1,9 @@
 {% extends './_base.html' %}
 {% block content %}
 <div id="post_detail" class="detail">
-    <div class="title post_title">
+    <div class="headline post_headline">
         <h2>
-            {{ event.title }}
+            {{ event.headline }}
         </h2>
     </div>
     {% if event.above_content_image %}
