Add |safe to footer

--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -30,7 +30,7 @@
             {% endblock %}
         </div>
         <div id="footer">
-            {{ tougcomsys.FOOTER_CONTENT }}
+            {{ tougcomsys.FOOTER_CONTENT|safe }}
         </div>
     </body>
 </html>
