Change ordering of menus and menu items
Also some CSS changes

--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -19,19 +19,19 @@
         <div id="head">
             <a href="{% url 'tougcomsys:homepage' %}"><img src="{{ tougcomsys.BANNER_IMAGE }}"></a>
         </div>
-        <div id="menubar">
-            {% for menu in menus %}
-                {% if forloop.first %}
-                    {% for item in menu.menuitem_set.all %}
-                        <a href="{{ item.link.url }}">{{ item.link.label }}</a>
-                    {% endfor %}
-                {% endif %}
-            {% endfor %}
-        </div>
+        {% if menus.0 %}
+            <div id="menubar">
+                {% for item in menus.0.menuitem_set.all %}
+                    <a href="{{ item.link.url }}">{{ item.label }}</a>
+                {% endfor %}
+            </div>
+        {% endif %}
+
         <div id="mainstage">
             {% block content %}
             {% endblock %}
         </div>
+
         <div id="footer">
             {{ tougcomsys.FOOTER_CONTENT|safe }}
         </div>
