--- a/static/tougcomsys/tougcomsys_blue.css
+++ b/static/tougcomsys/tougcomsys_blue.css
@@ -1,179 +1,165 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 
-@media only screen and (max-width: 600px) {
-    /* Global */
+body {
+    border-color:black;
+}
 
-    body {
-        border-top:2px solid black;
-    }
+#footer {
+    background-color:#002e5c;
+    color:white;
+}
 
-    #menubar {
-        border-top: solid black;
-        border-bottom: solid black;
+#menubar {
+    border-color: black;
+}
 
-    }
-    
-    #menubar a {
-        color:#022e5b;
+#menubar a {
+    color:#022e5b;
+}
 
-    }
+#sidemenu {
+    border-color: black;
+}
 
-    /* list */
-    div.list div.article, div.list div.event_date {
-        border-color: #00a7e0;
-    }
-
-    /* div.list div.headline h2 {
-        color:white;
-        background-color:#002e5c;
-
-    } */
-    /* div.list div.headline h2 a {
-        color:white;
-    }
- */
-
-    div.list div.headline h2 {
-        color:#002e5c;
-        background-color: #cdf;
-    }
-
-    
-    div.list div.headline h2 a {
-        color:#002e5c;
-    }
-
-    div.list div.headline h3 {
-        color:#00a7e0;
-    }
-
-    div.list div.headline h3 a {
-        color:#00a7e0;
-    }
-
-    /* detail */
-    /* div.list div.headline h2 {
-        color:white;
-        background-color:#002e5c;
-
-    } */
-    /* div.list div.headline h2 a {
-        color:white;
-    }
-     */
-
-     div.detail div.headline h2 {
-        color:#002e5c;
-        background-color: #cdf;
-
-    }
+#sidemenu a {
+    color:#022e5b;
+}
 
 
-    div.detail div.headline h2 a {
+div.detail {
+}
+
+div.detail div.content {
+}
+
+div.detail div.content_image {
+}
+
+div.detail div.content_image img {
+}
+
+div.detail div.event_dates {
+}
+
+div.detail div.meta {
+}
+
+div.detail div.headline {
+}
+
+div.detail div.headline h2 {
     color:#002e5c;
-    }
-
-    div.detail .headline h3 {
-        color:#00a7e0;
-    }
-
-    div.detail .headline h3 a {
-        color:#00a7e0;
-    }
-
-
-    #footer {
-        background-color:#002e5c;
-        color:white;
-    }
+    background-color: #cdf;
 }
 
-@media screen and (min-width:601px) {
-    /* Global */
-
-    body {
-        border-top:2px solid black;
-    }
-
-    #menubar {
-        border-top: solid black;
-        border-bottom: solid black;
-
-    }
-    
-    #menubar a {
-        color:#022e5b;
-    }
-
-    div.list #columns .column  {
-        border-left: 1px solid black;
-    }
-
-    /* list */
-    div.list div.article, div.list div.event_date {
-        border-color: #00a7e0;
-    }
-
-    /* div.list div.headline h2 {
-        color:white;
-        background-color:#002e5c;
-
-    }
-    div.list div.headline h2 a {
-        color:white;
-
-    } */
-
-    div.list div.headline h2 {
-        color:#002e5c;
-        background-color: #cdf;
-    }
-    
-    div.list div.headline h2 a {
-        color:#002e5c;
-    }
-
-
-    div.list div.headline h3 {
-        color:#00a7e0;
-    }
-
-    div.list div.headline h3 a {
-        color:#00a7e0;
-    }
-
-    /* detail */
-    /* .detail .headline h2 {
-        color:white;
-        background-color:#002e5c;
-
-    }
-    .detail .headline h2 a {
-        color:white;
-    } */
-
-    div.detail div.headline h2 {
-        color:#002e5c;
-        background-color: #cdf;
-
-    }
-    div.detail div.headline h2 a {
-        color:#002e5c;
-    }
-
-    .detail .headline h3 {
-        color:#00a7e0;
-    }
-
-    .detail .headline h3 a {
-        color:#00a7e0;
-    }
-
-
-    
-    #footer {
-        background-color:#002e5c;
-        color:white;
-    }
+div.detail div.headline h2 a {
+    color:#002e5c;
 }
+
+div.detail div.headline h3 {
+    color:#00a7e0;
+}
+
+div.detail div.headline h3 a {
+    color:#00a7e0;
+}
+
+div.list div.columns #column_first.column {
+}
+
+div.list #columns .column  {
+    border-color: #cdf;
+}
+
+div.list div.columns {
+}
+
+div.list .list_image {
+}
+
+div.list div.list_image img {
+}
+
+div.list div.meta {
+}
+
+div.list div.article, div.list div.event_date {
+    border-color: #00a7e0;
+}
+
+div.list div.article div.summary {
+}
+
+div.list div.article div.headline {
+}
+
+div.list div.article div.headline h2 {
+    color:#002e5c;
+    background-color: #cdf;
+}
+
+div.list div.article div.headline h2 a {
+    color:#002e5c;
+    background-color: #cdf;
+}
+
+div.list div.article div.headline h3 {
+    color:#00a7e0;
+}
+
+div.list div.article div.headline h3 a {
+    color:#00a7e0;
+}
+
+div.list div.article_nimg_nmet {
+}
+
+div.list div.article_nimg_ymet {
+}
+
+/* div.list  {
+} */
+
+div.list div.column_first div.article_yimg_nmet {
+}
+
+
+div.list div.column_first div.article_yimg_nmet div.list_image {
+}
+
+div.list div.column_first div.article_yimg_nmet div.summary {
+}
+
+div.list div.column_first div.article_yimg_nmet div.headline {
+}
+
+div.list div.column_first div.article_yimg_ymet {
+}
+
+div.list div.column_first div.article_yimg_ymet div.list_image {
+}
+
+div.list div.column_first div.article_yimg_ymet div.summary {
+}
+
+div.list div.column_first div.article_yimg_nmet div.meta {
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
