Fix title tag in _base.html

--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Suffolk Democratic Committe, Virginia</title>
+        <title>{{ tougcomsys.SITE_NAME }}</title>
         <link rel="stylesheet" href="{% static 'tougcomsys/tougcomsys.css' %}">
         {% if tougcomsys.COLORSCHEME %}
             {% with tougcomsys.COLORSCHEME as colorscheme %}
