--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -17,7 +17,9 @@
     </head>
     <body>
         <div id="head">
-            <a href="{% url 'tougcomsys:homepage' %}"><img src="{{ tougcomsys.BANNER_IMAGE }}"></a>
+            {% if tougcomsys.BANNER_IMAGE %}
+                <a href="{% url 'tougcomsys:homepage' %}"><img src="{{ tougcomsys.BANNER_IMAGE }}"></a>
+            {% endif %}
         </div>
         {% if menus.0 %}
             <div id="menubar">
